Refactor configuration and installation scripts; remove unused scripts and add CGI functionality

--- a/conf/ifwan.conf
+++ b/conf/ifwan.conf
@@ -1,6 +1,6 @@
-MODO=manual
-IFWAN=eno1
-IP=172.29.230.173
-MASC=25
-PE=172.29.230.129
-S_DNS=172.129.230.129
+MODO=dhcp
+IFWAN=
+IP=
+MASC=
+PE=
+S_DNS=
